[package]
name = "tippy-tappy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.12.1", features = ["collector"] }
tokio = { version = "1.37.0", features = ["full"] }
poise = "0.6.1"
chrono = { version = "*" }
serde = "1.0.203"
serde_json = "1.0.117"
ascii_table = { version = "4.0.3", features = ["wide_characters"] }
itertools = "0.13.0"
